; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_types.c_xfs_verify_ino.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_types.c_xfs_verify_ino.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_mount = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xfs_verify_ino(%struct.xfs_mount* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.xfs_mount*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.xfs_mount* %0, %struct.xfs_mount** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call i64 @XFS_INO_TO_AGNO(%struct.xfs_mount* %8, i64 %9)
  store i64 %10, i64* %6, align 8
  %11 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @XFS_INO_TO_AGINO(%struct.xfs_mount* %11, i64 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i64, i64* %6, align 8
  %15 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %16 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp sge i64 %14, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %34

21:                                               ; preds = %2
  %22 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i64 @XFS_AGINO_TO_INO(%struct.xfs_mount* %22, i64 %23, i32 %24)
  %26 = load i64, i64* %5, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %21
  store i32 0, i32* %3, align 4
  br label %34

29:                                               ; preds = %21
  %30 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %31 = load i64, i64* %6, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @xfs_verify_agino(%struct.xfs_mount* %30, i64 %31, i32 %32)
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %29, %28, %20
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @XFS_INO_TO_AGNO(%struct.xfs_mount*, i64) #1

declare dso_local i32 @XFS_INO_TO_AGINO(%struct.xfs_mount*, i64) #1

declare dso_local i64 @XFS_AGINO_TO_INO(%struct.xfs_mount*, i64, i32) #1

declare dso_local i32 @xfs_verify_agino(%struct.xfs_mount*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
